--- a/JADE-DOOR.Api/JADE-DOOR.Api.csproj
+++ b/JADE-DOOR.Api/JADE-DOOR.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,5 +27,12 @@
     <ProjectReference Include="..\JADE-DOOR.Domain\JADE-DOOR.Domain.csproj" />
     <ProjectReference Include="..\JADE-DOOR.Data\JADE-DOOR.Data.csproj" />
   </ItemGroup>
+
+ <ItemGroup>
+  <None Update="appsettings.json">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
+
 
 </Project>
